--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Golf Handicap Calculator</title>
 </head>
 
-<body class="test-box">
+<body>
     <section class="background">
         <div class="header">
             <h1 class="test">Golf Handicap Calculator</h1>
@@ -21,14 +21,52 @@
         <div class="content">
             <div class="instructions">
                 <h3 class="text-color" style="text-decoration:underline">Instructions</h3>
-                <p class="text-color">Input your recent scores along with the course rating and slope rating for each course you have played at. If you enter a 9 hole score, you should enter the course rating for the 9 holes you have played, and not the rating for the full 18 holes. If you are not sure of the ratings for the courses you have played at, please use the link below to access the database provided by The R&A: <br> <a href="https://www.randa.org/worldhandicapsystem/Lookup" target="_blank" class="text-color link">R&A Course Rating and Slope Database</a></p>
+                <p class="text-color">Input your recent scores along with the course rating and slope rating for each course you have played at. If you enter a 9 hole score, you should enter the course rating for the 9 holes you have played, and not the rating for the full 18 holes. If you are not sure of the ratings for the courses you have played, please use the link below to access the database provided by The R&A: <br> <a href="https://www.randa.org/worldhandicapsystem/Lookup" target="_blank" class="text-color link">R&A Course Rating and Slope Database</a></p>
                 <p class="text-color">To calculate an accurate handicap you must input at least 54 holes of scores, made up of either 18 hole or 9 hole rounds. Enter each round individually, please don't provide an 18 hole and 9 hole score in the same line otherwise the 9 hole score will be ignored. If you know the value of the playing condition adjustment then enter this in the field provided. If you don't know this value, the calculator will default to "0". </p>
                 <p class="text-color">Although you can calculate a handicap index with just 54 holes of scoring data, the more data you provide the more accurate your handicap will be. Up to 20 scores can be submitted and for each one a "Score Differential" will be calculated. For 9 hole rounds, the differential for each set of 9 holes will be calculated and then two 9 hole rounds will be combined into one 18 hole differential. The handicap index is then calculated as per the table below:</p>
-                <img src="images/WHSCalculations.png" alt="WHSCalculations"></img>   
+                <img src="images/WHSCalculations.png" alt="WHSCalculations" class="diffs-graphic"></img>
+                <p class="text-color">The handicap provided by the calculator is just your handicap index and is not the number you should be playing from on the course. The Playing Handicap Calculator below will tailor your handicap to the course you want to play.</p>  
+                <form id="course-handicap">
+                    <table class="course-hcap">
+                        <thead class="table-headings">
+                            <tr>
+                                <th>No. of <br>Holes</th>
+                                <th>Handicap <br>Index</th>
+                                <th>Slope <br>Rating</th>
+                                <th>Course <br>Rating</th>
+                                <th>Course <br>Par</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <select name="holes[]" id="holes">
+                                        <option value="18">18</option>
+                                        <option value="9">9</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <input type="text" name="holes[]" placeholder="18.0">
+                                </td>
+                                <td>
+                                    <input type="text" name="holes[]" placeholder="113">
+                                </td>
+                                <td>
+                                    <input type="text" name="holes[]" placeholder="72">
+                                </td>
+                                <td>
+                                    <input type="text" name="holes[]" placeholder="72">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <br>
+                    <button class="btn btn-primary modal-course">Submit</button>
+                </form> 
             </div>
             <form id="handicap-calculator" class="form">
                 <table class="table">
-                    <thead>
+                    <thead class="table-headings">
                         <tr>
                             <th>Round Number</th>
                             <th>18 Hole <br>Score</th>
@@ -77,14 +115,14 @@
     </section>
     <div class="modal">
         <div class="modal-box">
-            <h3></h3>
+            <h3 id="modal-text"></h3>
+            <h2 id="modal-index"></h2>
             <button class="close-modal"><i class="fas fa-times"></i></button>
         </div>
     </div>
    
 
     <script type="module" src="scripts/differential-calculator.js"></script>
-    <script type="module" src="scripts/test.js"></script>
     <script type="module" src="scripts/table-render.js"></script>
     <script type="module" src="scripts/oneDecimalPlace.js"></script>
     <script type="module" src="scripts/handicap-index.js"></script>
@@ -92,6 +130,7 @@
     <script type="module" src="scripts/average-calculator.js"></script>
     <script type="module" src="scripts/clear-buttons.js"></script>
     <script type="module" src="scripts/modal-control.js"></script>
+    <script type="module" src="scripts/course-handicap.js"></script>
 </body>
 
 </html>
