Code updated to be more functional, old code kept as comments for reference

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <select name="holes[]" id="holes">
+                                        <select name="holes" id="holes">
                                             <option value="18">18</option>
                                             <option value="9">9</option>
                                         </select>
                                     </td>
                                     <td>
-                                        <input type="text" name="holes[]" placeholder="18.0">
+                                        <input type="text" name="holes" placeholder="18.0">
                                     </td>
                                     <td>
-                                        <input type="text" name="holes[]" placeholder="113">
+                                        <input type="text" name="holes" placeholder="113">
                                     </td>
                                     <td>
-                                        <input type="text" name="holes[]" placeholder="72">
+                                        <input type="text" name="holes" placeholder="72">
                                     </td>
                                     <td>
-                                        <input type="text" name="holes[]" placeholder="72">
+                                        <input type="text" name="holes" placeholder="72">
                                     </td>
                                 </tr>
                             </tbody>
@@ -90,19 +90,19 @@
                                 <h5 style="color:white">1</h5>
                             </td>
                             <td>
-                                <input type="text" class="form-input" name="round1[]" placeholder="90">
+                                <input type="text" class="form-input" name="round1" placeholder="90">
                             </td>
                             <td>
-                                <input type="text" class="form-input" name="round1[]" placeholder="">
+                                <input type="text" class="form-input" name="round1" placeholder="">
                             </td>
                             <td>
-                                <input type="text" class="form-input" name="round1[]" placeholder="113">
+                                <input type="text" class="form-input" name="round1" placeholder="113">
                             </td>
                             <td>
-                                <input type="text" class="form-input" name="round1[]" placeholder="72">
+                                <input type="text" class="form-input" name="round1" placeholder="72">
                             </td>
                             <td>
-                                <input type="text" class="form-input" name="round1[]" placeholder="">
+                                <input type="text" class="form-input" name="round1" placeholder="">
                             </td>
                             <td>
                                 <button type="button" id="1" class="btn btn-danger btn-sm">Clear</button>
@@ -128,7 +128,6 @@
         </div>
     </div>
    
-
     <script type="module" src="scripts/differential-calculator.js"></script>
     <script type="module" src="scripts/table-render.js"></script>
     <script type="module" src="scripts/oneDecimalPlace.js"></script>
