Footer added and CSS updated

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                 </div>
             </form>    
         </div> 
+        <br>
+        <footer class="text-color footer">Disclaimer: This is a free tool provided for estimating a handicap. Values given by the calculator should not be considered official and will not be valid for competitions.</footer>
     </section>
     <div class="modal">
         <div class="modal-box">
@@ -129,6 +131,7 @@
             <button class="close-modal"><i class="fas fa-times"></i></button>
         </div>
     </div>
+    
    
     <script type="module" src="scripts/differential-calculator.js"></script>
     <script type="module" src="scripts/table-render.js"></script>
